fix(Popover): Arrow wrong position

--- a/src/components/PPLabelPage/PPButtonSet/index.less
+++ b/src/components/PPLabelPage/PPButtonSet/index.less
@@ -57,3 +57,11 @@
     }
   }
 }
+.popoverLeft {
+  :global {
+    .ant-popover-arrow {
+      right: 0.1rem;
+      left: unset;
+    }
+  }
+}
